<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:elevation="4dp"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="60dp"
        app:shape_arc_position="bottom"
        android:layout_width="match_parent"
        android:layout_height="440dp">

        <FrameLayout
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </com.github.florent37.shapeofview.shapes.ArcView>

    <com.google.android.material.card.MaterialCardView
        android:layout_margin="10dp"
        app:cardBackgroundColor="@android:color/white"
        android:background="?android:attr/selectableItemBackground"
        android:elevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/txt_login"
                android:textStyle="bold"
                android:textSize="28sp"
                android:text="Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginBottom="5dp"
                app:errorEnabled="true"
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:hint="Masukkan Email Anda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:errorEnabled="true"
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/et_password"
                    android:hint="Masukkan Password Anda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:gravity="end"
                android:text="Forgot Password?"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:padding="10dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="56dp"
                android:layout_margin="10dp"
                android:text="login"
                android:layout_alignParentBottom="true"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:id="@+id/txt_register"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:text="Belum Punya Akun?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:indeterminate="true"
        android:visibility="invisible"
        android:progress="0"
        android:layout_centerInParent="true"
        android:id="@+id/pb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>